--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="http://fonts.cdnfonts.com/css/bubblegum" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/bubblegum" rel="stylesheet">
     <title>Fluffy Polar Bears - New Year Event</title>
   </head>
   <body class="h-full">
